tests/paczka1/fuzzy1/71271498.err
Error in line 1: Xd2cRDm1s A121 88,8
Error in line 23: bbk2zRFnHkT S787 58,0
Error in line 30: xTfo86 S787 34,5
Error in line 36: xTfo86 A433 36,1
Error in line 34: S802 A433 96,4
